# diablo_onboard

./: README.md
launch/: model_launch.py
src/Motion_Ctrl_diablo/: package.xml  setup.cfg  setup.py
src/Motion_Ctrl_diablo/Motion_Ctrl_diablo/: Motion_Ctrl_diablo.py
src/Motion_Ctrl_sim/: package.xml  setup.cfg  setup.py
src/Motion_Ctrl_sim/Motion_Ctrl_sim/: Motion_Ctrl_sim.py
src/alarm_node/: package.xml  setup.cfg  setup.py
src/alarm_node/alarm_node/: alarm_node.py
src/button_serial/: package.xml  setup.cfg  setup.py
src/button_serial/button_serial/: button_reader.py
src/collision_simulation/: package.xml  setup.cfg  setup.py
src/collision_simulation/collision_simulation/: collision_simulation_node.py
src/csv_saver_node/: package.xml  setup.cfg  setup.py
src/csv_saver_node/csv_saver_node/: csv_saver_node.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Collisionprediction.msg  Joystick.msg  MainButtons.msg  Panel.msg  SideButtons.msg  SyncedData.msg
src/data_processing_node/: package.xml  setup.cfg  setup.py
src/data_processing_node/code_explaination/: data_processing_node_code.txt  data_processing_node_explain.txt
src/data_processing_node/data_processing_node/: data_processing_node.py
src/diablo_csv_logger/: CMakeLists.txt  package.xml
src/diablo_csv_logger/code_explaination/: diablo_csv_logger_code.txt  diablo_csv_logger_explain.txt
src/diablo_csv_logger/src/: diablo_csv_logger.cpp
src/escape_node/: code.txt  package.xml  setup.cfg  setup.py
src/escape_node/escape_node/: escape_node.py
src/get_joystick_input/: package.xml  setup.cfg  setup.py
src/get_joystick_input/get_joystick_input/: get_joystick_input.py
src/label_record_node/: package.xml  setup.cfg  setup.py
src/label_record_node/label_record_node/: label_record_node.py
src/model_node/: package.xml  setup.cfg  setup.py
src/model_node/checkpoints/: LinSVM_draft.pkl  RF_draft.pkl  RUSBoost.pkl  clf_stage1.pkl  clf_stage2.pkl  libSVM_draft.pkl  scaler.joblib  scaler.pkl
src/model_node/code_explaination/: model_code.txt  model_explain.txt
src/model_node/model_node/: main.py
src/motion_ctrl_diablo/: package.xml  setup.cfg  setup.py
src/motion_ctrl_diablo/motion_ctrl_diablo/: motion_ctrl_diablo.py
src/motion_ctrl_sim/: package.xml  setup.cfg  setup.py
src/motion_mux/: package.xml  setup.cfg  setup.py
src/motion_mux/motion_mux/: motion_mux_node.py
src/processed_data_saver/: package.xml  setup.cfg  setup.py
src/processed_data_saver/code_explaination/: processed_data_saver_code.txt
src/processed_data_saver/processed_data_saver/: processed_data_saver.py
src/sw_data_processing/: CMakeLists.txt  package.xml
src/sw_data_processing/code_explaination/: sw_data_processing_code.txt  sw_data_processing_explain.txt
src/sw_data_processing/src/: sw_data_processing.cpp
src/sync_node/: package.xml  setup.cfg  setup.py
src/sync_node/sync_node/: sync_node.py
src/time_logger/: package.xml  setup.cfg  setup.py
src/time_logger/time_logger/: time_logger.py
src/timestamp_processing_node/: package.xml  setup.cfg  setup.py
src/timestamp_processing_node/timestamp_processing_node/: timestamp_processing_node.py
src/trigger/: package.xml  setup.cfg  setup.py
src/trigger/trigger/: keyboard_pub_sub.py
