<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pc@todo.todo">pc</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>motion_msgs</build_depend>
  <build_depend>ception_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>motion_msgs</exec_depend>
  <exec_depend>ception_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
