<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_processing_node</name>
  <version>0.1.0</version>
  <description>A ROS2 node for data processing with sliding window.</description>

  <maintainer email="pc@todo.todo">pc</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs</build_depend> <!-- 自定义消息类型 -->
  <exec_depend>python3-numpy</exec_depend>


  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export build information -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

