<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>processed_data_saver</name>
  <version>0.0.1</version>
  <description>ROS2 package for subscribing to processed data and saving it to CSV.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs</build_depend> <!-- 自定义消息类型 -->
  <build_depend>numpy</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export build information -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
