<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sw_data_processing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pc@todo.todo">pc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

 <!-- 添加运行时和构建依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>motion_msgs</build_depend>
  <build_depend>ception_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs</build_depend> <!-- 如果有自定义消息 -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>motion_msgs</exec_depend>
  <exec_depend>ception_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend> <!-- 如果有自定义消息 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
